<resources>
    <string name="app_name">IOT3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_desc_bg">Background image</string>
    <string name="occupancy_title">Occupancy</string>
    <string name="null_value">00</string>
    <string name="image_of_avatar_1">Image of avatar 1</string>
    <string name="image_of_avatar_2">Image of avatar 2</string>
</resources>
